--- a/mototorque/src/main/resources/static/index.html
+++ b/mototorque/src/main/resources/static/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <link rel="manifest" href="/manifest.json">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta nam="theme-color" content="#111111">
+    <meta name="theme-color" content="#111111">
     <title>MotoTorque</title>
+
+    <link rel="manifest" href="/manifest.json">
+
     <style>
         *,
         *::before,
@@ -96,26 +98,11 @@
         .maintenance-item:last-child { border-bottom: none; }
         .maintenance-category { font-weight: 600; color: #a07b49; }
 
-        /* --- mobilne nadpisania --- */
         @media (max-width: 768px) {
-            body {
-                padding: 16px;
-            }
-
-            h1 {
-                font-size: 24px;
-                text-align: center;
-            }
-
-            .picker-row {
-                flex-direction: column;
-                gap: 16px;
-            }
-
-            .picker {
-                width: 100%;
-            }
-
+            body { padding: 16px; }
+            h1 { font-size: 24px; text-align: center; }
+            .picker-row { flex-direction: column; gap: 16px; }
+            .picker { width: 100%; }
             .input-with-list input,
             .torque-search button,
             .maintenance button {
@@ -124,435 +111,71 @@
                 padding: 14px 16px;
                 min-height: 48px;
             }
-
             .torque-search,
-            .maintenance {
-                margin-top: 24px;
-            }
+            .maintenance { margin-top: 24px; }
         }
     </style>
+
+    <script defer src="/app.js"></script>
 </head>
+
 <body>
 <main class="app">
+    <h1>MotoTorque</h1>
 
-<div class="picker-row">
-    <!-- Marka -->
-    <div class="picker" id="brandWrapper">
-        <div class="picker-number">1</div>
-        <div class="picker-label">Wybierz markę</div>
-        <div class="input-with-list">
-            <input type="text" id="brandInput" placeholder="np. BMW"
-                   oninput="handleInput('brand')" autocomplete="off">
-            <div id="brandSuggestions" class="suggestion-list"></div>
-        </div>
-    </div>
-
-    <!-- Model -->
-    <div class="picker" id="modelWrapper">
-        <div class="picker-number">2</div>
-        <div class="picker-label">Wybierz model</div>
-        <div class="input-with-list">
-            <input type="text" id="modelInput" placeholder="najpierw wybierz markę"
-                   oninput="handleInput('model')" autocomplete="off">
-            <div id="modelSuggestions" class="suggestion-list"></div>
-        </div>
-    </div>
-
-    <!-- Rok -->
-    <div class="picker" id="yearWrapper">
-        <div class="picker-number">3</div>
-        <div class="picker-label">Wybierz rocznik</div>
-        <div class="input-with-list">
-            <input type="text" id="yearInput" placeholder="najpierw wybierz model"
-                   readonly onclick="openYearList()">
-            <div id="yearSuggestions" class="suggestion-list"></div>
-        </div>
-    </div>
-</div>
-
-<!-- Wyszukiwarka momentu dokręcania -->
-<section class="torque-search">
-    <h2>Znajdź moment dokręcania</h2>
-    <div class="input-with-list">
-        <input type="text" id="torqueQuery"
-               placeholder="nazwa części lub numer śruby (np. M10×1.25)"
-               autocomplete="off">
-        <div id="torqueSuggestions" class="suggestion-list"></div>
-    </div>
-    <button type="button" onclick="searchTorque()">Szukaj</button>
-
-    <div id="torqueResults" class="torque-results hidden"></div>
-    <div id="torqueError" class="torque-error hidden"></div>
-    <div id="torqueFallback" class="torque-error hidden"></div>
-</section>
-
-<!-- Parametry eksploatacyjne -->
-<section class="maintenance">
-    <h2>Parametry eksploatacyjne</h2>
-    <button type="button" onclick="loadMaintenance()">Pokaż</button>
-    <div id="maintenanceError" class="torque-error hidden"></div>
-    <div id="maintenanceList" class="maintenance-list hidden"></div>
-</section>
-
-<script>
-(() => {
-    /* ---------------------------
-       Pola, stan i pomocnicze
-    --------------------------- */
-    const brandInput = document.getElementById('brandInput');
-    const modelInput = document.getElementById('modelInput');
-    const yearInput = document.getElementById('yearInput');
-    const torqueInput = document.getElementById('torqueQuery');
-    const torqueSuggestions = document.getElementById('torqueSuggestions');
-
-    const state = {
-        brand: null,
-        model: null,
-        timers: {
-            brand: null,
-            model: null,
-            torque: null
-        }
-    };
-
-    const pickers = {
-        brand: { input: brandInput, suggestions: document.getElementById('brandSuggestions') },
-        model: { input: modelInput, suggestions: document.getElementById('modelSuggestions') },
-        year:  { input: yearInput,  suggestions: document.getElementById('yearSuggestions') }
-    };
-
-    const ENDPOINTS = {
-        brands:  q => `/api/motorcycles/brands?query=${encodeURIComponent(q)}`,
-        models:  q => `/api/motorcycles/models?brand=${encodeURIComponent(state.brand)}&query=${encodeURIComponent(q)}`,
-        years:   () => `/api/motorcycles/years?brand=${encodeURIComponent(state.brand)}&model=${encodeURIComponent(state.model)}`,
-        torque:  q => `/api/torque?brand=${encodeURIComponent(state.brand)}&model=${encodeURIComponent(state.model)}&productionYear=${encodeURIComponent(yearInput.value)}&query=${encodeURIComponent(q)}`,
-        torqueSuggestions: q => `/api/torque/suggestions?brand=${encodeURIComponent(state.brand)}&model=${encodeURIComponent(state.model)}&productionYear=${encodeURIComponent(yearInput.value)}&query=${encodeURIComponent(q)}`,
-        maintenance: () => `/api/maintenance?brand=${encodeURIComponent(state.brand)}&model=${encodeURIComponent(state.model)}&productionYear=${encodeURIComponent(yearInput.value)}`
-    };
-
-    /* ---------------------------
-       Picker: marka / model / rok
-    --------------------------- */
-    function handleInput(type) {
-        const { input } = pickers[type];
-        const value = input.value.trim();
-
-        clearTimeout(state.timers[type]);
-
-        if (!value) {
-            toggleSuggestions(type, false);
-            return;
-        }
-        state.timers[type] = setTimeout(() => fetchPickerSuggestions(type, value), 200);
-    }
-
-    async function fetchPickerSuggestions(type, query) {
-        try {
-            if (type === 'model' && !state.brand) {
-                return showSuggestionMessage(type, 'Najpierw wybierz markę');
-            }
-
-            const url = type === 'brand'
-                ? ENDPOINTS.brands(query)
-                : ENDPOINTS.models(query);
-
-            const res  = await fetch(url);
-            const data = await res.json();
-            renderPickerSuggestions(type, data);
-        } catch {
-            showSuggestionMessage(type, 'Błąd połączenia');
-        }
-    }
-
-    function renderPickerSuggestions(type, items) {
-        const box = pickers[type].suggestions;
-        box.innerHTML = '';
-
-        if (!items.length) {
-            return showSuggestionMessage(type, 'Brak wyników');
-        }
-
-        items.forEach(item => {
-            const el = document.createElement('div');
-            el.className  = 'suggestion-item';
-            el.textContent = item;
-            el.onclick = () => selectPickerValue(type, item);
-            box.appendChild(el);
-        });
-
-        toggleSuggestions(type, true);
-    }
-
-    function selectPickerValue(type, value) {
-        pickers[type].input.value = value;
-
-        if (type === 'brand') {
-            state.brand = value;
-            state.model = null;
-            modelInput.value = '';
-            modelInput.placeholder = 'np. F800';
-            yearInput.value = '';
-            yearInput.placeholder = 'najpierw wybierz model';
-            toggleSuggestions('model', false);
-            toggleSuggestions('year', false);
-        } else if (type === 'model') {
-            state.model = value;
-            yearInput.value = '';
-            yearInput.placeholder = 'kliknij, aby wybrać rok';
-            toggleSuggestions('model', false);
-            toggleSuggestions('year', false);
-            fetchYears();
-        }
-        toggleSuggestions(type, false);
-    }
-
-    async function fetchYears() {
-        const box = pickers.year.suggestions;
-        box.innerHTML = '';
-
-        if (!state.brand || !state.model) {
-            return showSuggestionMessage('year', 'Najpierw wybierz model');
-        }
-
-        try {
-            const res   = await fetch(ENDPOINTS.years());
-            const years = await res.json();
-
-            if (!years.length) {
-                return showSuggestionMessage('year', 'Brak danych roczników');
-            }
-
-            years.forEach(year => {
-                const el = document.createElement('div');
-                el.className = 'suggestion-item';
-                el.textContent = year;
-                el.onclick = () => selectYear(year);
-                box.appendChild(el);
-            });
-
-            toggleSuggestions('year', true);
-        } catch {
-            showSuggestionMessage('year', 'Błąd połączenia');
-        }
-    }
-
-    function openYearList() {
-        if (!state.brand || !state.model) {
-            return alert('Najpierw wybierz markę i model');
-        }
-        const box = pickers.year.suggestions;
-        if (!box.innerHTML.trim()) {
-            fetchYears();
-        } else {
-            toggleSuggestions('year', true);
-        }
-    }
-
-    function selectYear(year) {
-        yearInput.value = year;
-        toggleSuggestions('year', false);
-    }
-
-    function showSuggestionMessage(type, text) {
-        const box = pickers[type].suggestions;
-        box.innerHTML = `<div class="suggestion-item suggestion-empty">${text}</div>`;
-        toggleSuggestions(type, true);
-    }
-
-    function toggleSuggestions(type, visible) {
-        pickers[type].suggestions.classList.toggle('visible', visible);
-    }
-
-    /* ---------------------------
-       Autouzupełnianie wyszukiwania
-    --------------------------- */
-    torqueInput.addEventListener('input', () => {
-        const value = torqueInput.value.trim();
-        clearTimeout(state.timers.torque);
-        toggleTorqueSuggestions(false);
-
-        if (value.length < 2 || !state.brand || !state.model || !yearInput.value) {
-            return;
-        }
-
-        state.timers.torque = setTimeout(() => fetchTorqueSuggestions(value), 200);
-    });
-
-    async function fetchTorqueSuggestions(query) {
-        try {
-            const res  = await fetch(ENDPOINTS.torqueSuggestions(query));
-            const data = await res.json();
-            renderTorqueSuggestions(data);
-        } catch {
-            toggleTorqueSuggestions(false);
-        }
-    }
-
-    function renderTorqueSuggestions(items) {
-        if (!items.length) {
-            return toggleTorqueSuggestions(false);
-        }
-        torqueSuggestions.innerHTML = items.map(alias =>
-            `<div class="suggestion-item" onclick="selectTorqueAlias('${alias.replace(/'/g, "\\'")}')">${alias}</div>`
-        ).join('');
-        toggleTorqueSuggestions(true);
-    }
-
-    window.selectTorqueAlias = value => {
-        torqueInput.value = value;
-        toggleTorqueSuggestions(false);
-    };
-
-    function toggleTorqueSuggestions(visible) {
-        torqueSuggestions.classList.toggle('visible', visible);
-    }
-
-    /* ---------------------------
-       Wyszukiwanie momentów
-    --------------------------- */
-    window.searchTorque = async () => {
-    const query = torqueInput.value.trim();
-
-    if (!state.brand || !state.model || !yearInput.value) {
-        return alert('Najpierw wybierz motocykl (marka, model, rok)');
-    }
-    if (!query) {
-        return alert('Podaj nazwę części lub numer śruby');
-    }
-
-    const resultBox   = document.getElementById('torqueResults');
-    const errorBox    = document.getElementById('torqueError');
-    const fallbackBox = document.getElementById('torqueFallback');
-
-    resultBox.classList.add('hidden');
-    errorBox.classList.add('hidden');
-    fallbackBox.classList.add('hidden');
-    resultBox.innerHTML = '';
-    fallbackBox.innerHTML = '';
-
-    try {
-        const res  = await fetch(ENDPOINTS.torque(query));
-        const data = await res.json();
-
-        if (!res.ok || !data.found) {
-            errorBox.textContent = 'Brak danych – spróbuj innej frazy';
-            errorBox.classList.remove('hidden');
-
-            if (data.fallbackSearchUrl) {
-                fallbackBox.innerHTML = `
-                    <button type="button" onclick="askToSearch('${data.fallbackSearchUrl}')">
-                        Wyszukaj w internecie
-                    </button>`;
-                fallbackBox.classList.remove('hidden');
-            }
-            return;
-        }
-
-        if (!data.specs || !data.specs.length) {
-            throw new Error('Brak danych – spróbuj innej frazy');
-        }
-
-        resultBox.innerHTML = data.specs.map(item => `
-            <div class="torque-result">
-                <div class="torque-part">${item.partName}</div>
-                <div class="torque-value">${item.torqueNm} Nm</div>
-                ${item.threadSize ? `<div class="torque-notes">Śruba: ${item.threadSize}</div>` : ''}
-                ${item.notes ? `<div class="torque-notes">${item.notes}</div>` : ''}
-                <div class="torque-source">${item.source || ''}</div>
-                <div class="torque-notes">
-                    Znaleziono po: <strong>${item.matchedBy === 'THREAD_SIZE' ? 'numerze śruby' : 'nazwie/aliasie'}</strong>
-                </div>
+    <div class="picker-row">
+        <div class="picker" id="brandWrapper">
+            <div class="picker-number">1</div>
+            <div class="picker-label">Wybierz markę</div>
+            <div class="input-with-list">
+                <input type="text" id="brandInput" placeholder="np. BMW"
+                       oninput="handleInput('brand')" autocomplete="off">
+                <div id="brandSuggestions" class="suggestion-list"></div>
             </div>
-        `).join('');
+        </div>
 
-        resultBox.classList.remove('hidden');
-    } catch (err) {
-        errorBox.textContent = err.message || 'Błąd połączenia';
-        errorBox.classList.remove('hidden');
-    }
-};
+        <div class="picker" id="modelWrapper">
+            <div class="picker-number">2</div>
+            <div class="picker-label">Wybierz model</div>
+            <div class="input-with-list">
+                <input type="text" id="modelInput" placeholder="najpierw wybierz markę"
+                       oninput="handleInput('model')" autocomplete="off">
+                <div id="modelSuggestions" class="suggestion-list"></div>
+            </div>
+        </div>
 
-window.askToSearch = url => {
-    if (url && confirm('Nie znaleziono w bazie. Czy wyszukać w internecie?')) {
-        window.open(url, '_blank');
-    }
-};
+        <div class="picker" id="yearWrapper">
+            <div class="picker-number">3</div>
+            <div class="picker-label">Wybierz rocznik</div>
+            <div class="input-with-list">
+                <input type="text" id="yearInput" placeholder="najpierw wybierz model"
+                       readonly onclick="openYearList()">
+                <div id="yearSuggestions" class="suggestion-list"></div>
+            </div>
+        </div>
+    </div>
 
-    /* ---------------------------
-       Parametry eksploatacyjne
-    --------------------------- */
-    window.loadMaintenance = async () => {
-        if (!state.brand || !state.model || !yearInput.value) {
-            return alert('Najpierw wybierz motocykl (marka, model, rok)');
-        }
+    <section class="torque-search">
+        <h2>Znajdź moment dokręcania</h2>
+        <div class="input-with-list">
+            <input type="text" id="torqueQuery"
+                   placeholder="nazwa części lub numer śruby (np. M10×1.25)"
+                   autocomplete="off">
+            <div id="torqueSuggestions" class="suggestion-list"></div>
+        </div>
+        <button type="button" onclick="searchTorque()">Szukaj</button>
 
-        const listBox  = document.getElementById('maintenanceList');
-        const errorBox = document.getElementById('maintenanceError');
+        <div id="torqueResults" class="torque-results hidden"></div>
+        <div id="torqueError" class="torque-error hidden"></div>
+        <div id="torqueFallback" class="torque-error hidden"></div>
+    </section>
 
-        listBox.classList.add('hidden');
-        errorBox.classList.add('hidden');
-        listBox.innerHTML = '';
-
-        try {
-            const res  = await fetch(ENDPOINTS.maintenance());
-            if (!res.ok) throw new Error();
-
-            const data = await res.json();
-            if (!data.length) {
-                errorBox.textContent = 'Brak danych eksploatacyjnych dla tego motocykla.';
-                errorBox.classList.remove('hidden');
-                return;
-            }
-
-            listBox.innerHTML = data.map(item => `
-                <div class="maintenance-item">
-                    <div class="maintenance-category">${item.category || 'Inne'}</div>
-                    <div class="maintenance-title">${item.parameter}</div>
-                    <div class="maintenance-value">
-                        ${item.value}${item.unit ? ` ${item.unit}` : ''}
-                    </div>
-                    ${item.conditions ? `<div class="maintenance-notes">Warunki: ${item.conditions}</div>` : ''}
-                    ${item.notes ? `<div class="maintenance-notes">Uwagi: ${item.notes}</div>` : ''}
-                </div>
-            `).join('');
-
-            listBox.classList.remove('hidden');
-        } catch {
-            errorBox.textContent = 'Brak danych eksploatacyjnych – spróbuj później.';
-            errorBox.classList.remove('hidden');
-        }
-    };
-
-    /* ---------------------------
-       Globalne listenery
-    --------------------------- */
-    document.addEventListener('click', event => {
-        ['brand', 'model', 'year'].forEach(type => {
-            const wrapper = document.getElementById(`${type}Wrapper`);
-            if (wrapper && !wrapper.contains(event.target)) {
-                toggleSuggestions(type, false);
-            }
-        });
-
-        if (!torqueInput.parentElement.contains(event.target)) {
-            toggleTorqueSuggestions(false);
-        }
-    });
-
-    yearInput.addEventListener('click', openYearList);
-
-    window.handleInput      = handleInput;
-    window.openYearList     = openYearList;
-    window.selectTorqueAlias = selectTorqueAlias;
-    window.searchTorque     = searchTorque;
-    window.loadMaintenance  = loadMaintenance;
-})();
-    if ('serviceWorker' in navigator) {
-  window.addEventListener('load', () => {
-    navigator.serviceWorker.register('/sw.js').catch(console.error);
-  });
-}
-</script>
+    <section class="maintenance">
+        <h2>Parametry eksploatacyjne</h2>
+        <button type="button" onclick="loadMaintenance()">Pokaż</button>
+        <div id="maintenanceError" class="torque-error hidden"></div>
+        <div id="maintenanceList" class="maintenance-list hidden"></div>
+    </section>
 </main>
 </body>
 </html>
