--- a/mototorque/src/main/resources/static/index.html
+++ b/mototorque/src/main/resources/static/index.html
@@ -126,7 +126,7 @@
     <div class="picker-row">
         <div class="picker" id="brandWrapper">
             <div class="picker-number">1</div>
-            <div class="picker-label">Wybierz markę</div>
+            <div class="picker-label">Wpisz markę</div>
             <div class="input-with-list">
                 <input type="text" id="brandInput" placeholder="np. BMW"
                        oninput="handleInput('brand')" autocomplete="off">
@@ -136,7 +136,7 @@
 
         <div class="picker" id="modelWrapper">
             <div class="picker-number">2</div>
-            <div class="picker-label">Wybierz model</div>
+            <div class="picker-label">Wpisz model</div>
             <div class="input-with-list">
                 <input type="text" id="modelInput" placeholder="najpierw wybierz markę"
                        oninput="handleInput('model')" autocomplete="off">
@@ -146,7 +146,7 @@
 
         <div class="picker" id="yearWrapper">
             <div class="picker-number">3</div>
-            <div class="picker-label">Wybierz rocznik</div>
+            <div class="picker-label">Wpisz rocznik</div>
             <div class="input-with-list">
                 <input type="text" id="yearInput" placeholder="najpierw wybierz model"
                        readonly onclick="openYearList()">
